--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -3,3 +3,5 @@ project(lab4)
 add_subdirectory_if_exists(netsurl)
 add_subdirectory_if_exists(netstemplateengine)
 add_subdirectory_if_exists(netsjson)
+add_subdirectory_if_exists(squareclass)
+add_subdirectory_if_exists(dynamictable)
