--- a/lab5/parentchild/CMakeLists.txt
+++ b/lab5/parentchild/CMakeLists.txt
@@ -4,7 +4,7 @@ project(parentchild)
 set(HEDEAR_FILES ParentChild.h Parent.h Child.h)
 set(SOURCE_FILES ParentChild.cpp Parent.cpp Child.cpp)
 
-add_library(libparentchild STATIC ${SOURCE_FILES})
+add_library(libparentchild STATIC ${SOURCE_FILES} ../memorychunk/MemoryChunk.cpp ../memorychunk/MemoryChunk.h ../memorychunk/main.cpp)
 target_include_directories(libparentchild PUBLIC .)
 
 add_executable(parentchild ${SOURCE_FILES} main.cpp)
