initialize files for matrix excercise

--- a/lab5/CMakeLists.txt
+++ b/lab5/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory_if_exists(textpool)
 add_subdirectory_if_exists(xxx)
 add_subdirectory_if_exists(parentchild)
 add_subdirectory_if_exists(marsjanin)
+add_subdirectory_if_exists(matrix)
