implement base methods and classes

--- a/lab6/student/CMakeLists.txt
+++ b/lab6/student/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 project(student)
 
-set(HEDEAR_FILES Student.h)
-set(SOURCE_FILES Student.cpp)
+set(HEDEAR_FILES Student.h StudyYear.h StudentRepository.h)
+set(SOURCE_FILES Student.cpp StudyYear.cpp StudentRepository.cpp)
 
 add_library(libstudent STATIC ${SOURCE_FILES})
 target_include_directories(libstudent PUBLIC .)
