add Point initial files and code

--- a/lab7/CMakeLists.txt
+++ b/lab7/CMakeLists.txt
@@ -6,3 +6,5 @@ add_subdirectory_if_exists(iterable)
 add_subdirectory_if_exists(academiaqueries)
 add_subdirectory_if_exists(realnumber)
 add_subdirectory_if_exists(vector)
+add_subdirectory_if_exists(KoloKula)
+add_subdirectory_if_exists(StudentComparator)
