--- a/lab7/CMakeLists.txt
+++ b/lab7/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory_if_exists(realnumber)
 add_subdirectory_if_exists(vector)
 add_subdirectory_if_exists(KoloKula)
 add_subdirectory_if_exists(StudentComparator)
+add_subdirectory_if_exists(punkt3d)
