implement basic code for last excercise, rysuj functions still waiting for implementation

--- a/lab7/CMakeLists.txt
+++ b/lab7/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory_if_exists(vector)
 add_subdirectory_if_exists(KoloKula)
 add_subdirectory_if_exists(StudentComparator)
 add_subdirectory_if_exists(punkt3d)
+add_subdirectory_if_exists(ksztalt)
