refactoring code, making it more legible

--- a/lab8/exceptions_example/CMakeLists.txt
+++ b/lab8/exceptions_example/CMakeLists.txt
@@ -5,7 +5,7 @@ set(SOURCE_FILES main.cpp)
 add_library(libexceptions_example STATIC ${SOURCE_FILES})
 target_include_directories(libexceptions_example PUBLIC .)
 
-add_executable(exceptions_example ${SOURCE_FILES} main.cpp ../adjust_subtitles/main.cpp)
+add_executable(exceptions_example ${SOURCE_FILES} main.cpp ../movie_subtitles/main.cpp)
 
 target_link_libraries(exceptions_example libexceptions_example)
 
