make proper file structure with all class and method declare, but no logic implementation yet

--- a/lab8/movie_subtitles/CMakeLists.txt
+++ b/lab8/movie_subtitles/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES MovieSubtitles.cpp)
 add_library(libmoviesubtitles STATIC ${SOURCE_FILES})
 target_include_directories(libmoviesubtitles PUBLIC .)
 
-add_executable(moviesubtitles ${SOURCE_FILES} main.cpp SubRipSubtitles.cpp SubRipSubtitles.h MicroDvdSubtitles.cpp MicroDvdSubtitles.h)
+add_executable(moviesubtitles ${SOURCE_FILES} main.cpp)
 
 target_link_libraries(moviesubtitles libmoviesubtitles)
 
