--- a/lab9/academiaserialzer/CMakeLists.txt
+++ b/lab9/academiaserialzer/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 project(serialization)
 
-set(HEDEAR_FILES Serialization.h)
-set(SOURCE_FILES Serialization.cpp)
+set(HEDEAR_FILES Serialization.h Room.h Building.h)
+set(SOURCE_FILES Serialization.cpp Room.cpp Building.cpp)
 
 add_library(libserialization STATIC ${SOURCE_FILES})
 target_include_directories(libserialization PUBLIC .)
