--- a/lab9/academiaserialzer/CMakeLists.txt
+++ b/lab9/academiaserialzer/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 project(serialization)
 
-set(HEDEAR_FILES Serialization.h Room.h Building.h)
+set(HEDEAR_FILES Serialization.h Room.h Building.h Serialization.h)
 set(SOURCE_FILES Serialization.cpp Room.cpp Building.cpp)
 
 add_library(libserialization STATIC ${SOURCE_FILES})
