--- a/tests/lab9test/CMakeLists.txt
+++ b/tests/lab9test/CMakeLists.txt
@@ -14,7 +14,7 @@ add_gtest_with_memleak(json_serializer libserialization)
 #######################################################################
 ##  ALL TESTS
 #######################################################################
-add_executable(lab9_all_tests ${SOURCE_FILES} ../../lab9/academiaserializer/Room.cpp ../../lab9/academiaserializer/Room.h ../../lab9/academiaserializer/Building.cpp ../../lab9/academiaserializer/Building.h ../../lab9/academiaserializer/Serializable.cpp ../../lab9/academiaserializer/Serializable.h ../../lab9/academiaserializer/Serialization.h ../../lab9/academiaserializer/main.cpp.cpp)
+add_executable(lab9_all_tests ${SOURCE_FILES} ../../lab9/academiaserializer/Room.cpp ../../lab9/academiaserializer/Room.h ../../lab9/academiaserializer/Building.cpp ../../lab9/academiaserializer/Building.h ../../lab9/academiaserializer/Serializable.cpp ../../lab9/academiaserializer/Serializable.h ../../lab9/academiaserializer/Serialization.h ../../lab9/academiaserializer/main.cpp)
 
 target_link_libraries(lab9_all_tests ${GTEST_LIBS})
 target_link_libraries(lab9_all_tests libserialization)
