lab9 JSON tests starting

--- a/lab9/academiaserializer/CMakeLists.txt
+++ b/lab9/academiaserializer/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 project(serialization)
 
-set(HEDEAR_FILES Serialization.h Room.h Building.h Serializable.h)
-set(SOURCE_FILES Serializable.cpp Room.cpp Building.cpp Serializable.cpp)
+set(HEDEAR_FILES Serialization.h Room.h Building.h Serializable.h JsonSerializer.h XmlSerializer.h)
+set(SOURCE_FILES Serializable.cpp Room.cpp Building.cpp Serializable.cpp JsonSerializer.cpp XmlSerializer.cpp)
 
 add_library(libserialization STATIC ${SOURCE_FILES})
 target_include_directories(libserialization PUBLIC .)
