--- a/tests/lab9test/CMakeLists.txt
+++ b/tests/lab9test/CMakeLists.txt
@@ -15,7 +15,7 @@ add_gtest_with_memleak(building_repository libserialization)
 #######################################################################
 ##  ALL TESTS
 #######################################################################
-add_executable(lab9_all_tests ${SOURCE_FILES} ../../lab9/academiaserializer/Room.cpp ../../lab9/academiaserializer/Room.h ../../lab9/academiaserializer/Building.cpp ../../lab9/academiaserializer/Building.h ../../lab9/academiaserializer/Serializable.cpp ../../lab9/academiaserializer/Serializable.h ../../lab9/academiaserializer/Serialization.h ../../lab9/academiaserializer/main.cpp)
+add_executable(lab9_all_tests ${SOURCE_FILES})
 
 target_link_libraries(lab9_all_tests ${GTEST_LIBS})
 target_link_libraries(lab9_all_tests libserialization)
