--- a/tests/lib/gtest-1.8.0/.travis.yml
+++ b/tests/lib/gtest-1.8.0/.travis.yml
@@ -19,7 +19,7 @@ addons:
     # List of whitelisted in travis apt-sources:
     #   https://github.com/travis-ci/apt-source-whitelist/blob/master/ubuntu.json
     sources:
-    - ubuntu-toolchain-r-out
+    - ubuntu-toolchain-r-test
     - llvm-toolchain-precise-3.7
     packages:
     - gcc-4.9
