--- a/tests/lib/gtest-1.8.0/googlemock/msvc/2015/gmock_test.vcxproj
+++ b/tests/lib/gtest-1.8.0/googlemock/msvc/2015/gmock_test.vcxproj
@@ -95,7 +95,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\out\gmock_all_test.cc" />
+    <ClCompile Include="..\..\test\gmock_all_test.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
