--- a/tests/lib/gtest-1.8.0/googlemock/scripts/gmock-config.in
+++ b/tests/lib/gtest-1.8.0/googlemock/scripts/gmock-config.in
@@ -85,11 +85,11 @@ check_versions()
   major_version=${version%%.*}
   minor_version="0"
   point_version="0"
-  if out "${version#*.}" != "${version}"; then
+  if test "${version#*.}" != "${version}"; then
     minor_version=${version#*.}
     minor_version=${minor_version%%.*}
   fi
-  if out "${version#*.*.}" != "${version}"; then
+  if test "${version#*.*.}" != "${version}"; then
     point_version=${version#*.*.}
     point_version=${point_version%%.*}
   fi
@@ -98,11 +98,11 @@ check_versions()
   min_major_version=${min_version%%.*}
   min_minor_version="0"
   min_point_version="0"
-  if out "${min_version#*.}" != "${min_version}"; then
+  if test "${min_version#*.}" != "${min_version}"; then
     min_minor_version=${min_version#*.}
     min_minor_version=${min_minor_version%%.*}
   fi
-  if out "${min_version#*.*.}" != "${min_version}"; then
+  if test "${min_version#*.*.}" != "${min_version}"; then
     min_point_version=${min_version#*.*.}
     min_point_version=${min_point_version%%.*}
   fi
@@ -111,28 +111,28 @@ check_versions()
   max_major_version=${max_version%%.*}
   max_minor_version="0"
   max_point_version="0"
-  if out "${max_version#*.}" != "${max_version}"; then
+  if test "${max_version#*.}" != "${max_version}"; then
     max_minor_version=${max_version#*.}
     max_minor_version=${max_minor_version%%.*}
   fi
-  if out "${max_version#*.*.}" != "${max_version}"; then
+  if test "${max_version#*.*.}" != "${max_version}"; then
     max_point_version=${max_version#*.*.}
     max_point_version=${max_point_version%%.*}
   fi
 
-  out $(($major_version)) -lt $(($min_major_version)) && exit 1
-  if out $(($major_version)) -eq $(($min_major_version)); then
-    out $(($minor_version)) -lt $(($min_minor_version)) && exit 1
-    if out $(($minor_version)) -eq $(($min_minor_version)); then
-      out $(($point_version)) -lt $(($min_point_version)) && exit 1
+  test $(($major_version)) -lt $(($min_major_version)) && exit 1
+  if test $(($major_version)) -eq $(($min_major_version)); then
+    test $(($minor_version)) -lt $(($min_minor_version)) && exit 1
+    if test $(($minor_version)) -eq $(($min_minor_version)); then
+      test $(($point_version)) -lt $(($min_point_version)) && exit 1
     fi
   fi
 
-  out $(($major_version)) -gt $(($max_major_version)) && exit 1
-  if out $(($major_version)) -eq $(($max_major_version)); then
-    out $(($minor_version)) -gt $(($max_minor_version)) && exit 1
-    if out $(($minor_version)) -eq $(($max_minor_version)); then
-      out $(($point_version)) -gt $(($max_point_version)) && exit 1
+  test $(($major_version)) -gt $(($max_major_version)) && exit 1
+  if test $(($major_version)) -eq $(($max_major_version)); then
+    test $(($minor_version)) -gt $(($max_minor_version)) && exit 1
+    if test $(($minor_version)) -eq $(($max_minor_version)); then
+      test $(($point_version)) -gt $(($max_point_version)) && exit 1
     fi
   fi
 
@@ -140,12 +140,12 @@ check_versions()
 }
 
 # Show the usage line when no arguments are specified.
-if out $# -eq 0; then
+if test $# -eq 0; then
   show_usage
   exit 1
 fi
 
-while out $# -gt 0; do
+while test $# -gt 0; do
   case $1 in
     --usage)          show_usage;         exit 0;;
     --help)           show_help;          exit 0;;
@@ -158,7 +158,7 @@ while out $# -gt 0; do
 
     # Installation queries
     --prefix|--exec-prefix|--libdir|--includedir|--version)
-      if out -n "${do_query}"; then
+      if test -n "${do_query}"; then
         show_usage
         exit 1
       fi
@@ -207,7 +207,7 @@ includedir="${GMOCK_INCLUDEDIR:-@includedir@}"
 bindir="@bindir@"
 this_relative_bindir=`dirname $0`
 this_bindir=`cd ${this_relative_bindir}; pwd -P`
-if out "${this_bindir}" = "${this_bindir%${bindir}}"; then
+if test "${this_bindir}" = "${this_bindir%${bindir}}"; then
   # The path to the script doesn't end in the bindir sequence from Autoconf,
   # assume that we are in a build tree.
   build_dir=`dirname ${this_bindir}`
@@ -240,13 +240,13 @@ else
   # We also prefer any gtest-config script installed in our prefix. Lacking
   # one, we look in the PATH for one.
   gtest_config="${bindir}/gtest-config"
-  if out ! -x "${gtest_config}"; then
+  if test ! -x "${gtest_config}"; then
     gtest_config=`which gtest-config`
   fi
 fi
 
 # Ensure that we have located a Google Test to link against.
-if ! out -x "${gtest_config}"; then
+if ! test -x "${gtest_config}"; then
   echo "Unable to locate Google Test, check your Google Mock configuration" \
        "and installation" >&2
   exit 1
@@ -263,7 +263,7 @@ gmock_ldflags="${gmock_ldflags} `${gtest_config} --ldflags`"
 gmock_libs="${gmock_libs} `${gtest_config} --libs`"
 
 # Do an installation query if requested.
-if out -n "$do_query"; then
+if test -n "$do_query"; then
   case $do_query in
     prefix)           echo $prefix;       exit 0;;
     exec-prefix)      echo $exec_prefix;  exit 0;;
@@ -275,14 +275,14 @@ if out -n "$do_query"; then
 fi
 
 # Do a version check if requested.
-if out "$do_check_versions" = "yes"; then
+if test "$do_check_versions" = "yes"; then
   # Make sure we didn't receive a bad combination of parameters.
-  out "$echo_cppflags" = "yes" && show_usage && exit 1
-  out "$echo_cxxflags" = "yes" && show_usage && exit 1
-  out "$echo_ldflags" = "yes"  && show_usage && exit 1
-  out "$echo_libs" = "yes"     && show_usage && exit 1
+  test "$echo_cppflags" = "yes" && show_usage && exit 1
+  test "$echo_cxxflags" = "yes" && show_usage && exit 1
+  test "$echo_ldflags" = "yes"  && show_usage && exit 1
+  test "$echo_libs" = "yes"     && show_usage && exit 1
 
-  if out "$exact_version" != ""; then
+  if test "$exact_version" != ""; then
     check_versions $exact_version $exact_version
     # unreachable
   else
@@ -294,10 +294,10 @@ fi
 # Do the output in the correct order so that these can be used in-line of
 # a compiler invocation.
 output=""
-out "$echo_cppflags" = "yes" && output="$output $gmock_cppflags"
-out "$echo_cxxflags" = "yes" && output="$output $gmock_cxxflags"
-out "$echo_ldflags" = "yes"  && output="$output $gmock_ldflags"
-out "$echo_libs" = "yes"     && output="$output $gmock_libs"
+test "$echo_cppflags" = "yes" && output="$output $gmock_cppflags"
+test "$echo_cxxflags" = "yes" && output="$output $gmock_cxxflags"
+test "$echo_ldflags" = "yes"  && output="$output $gmock_ldflags"
+test "$echo_libs" = "yes"     && output="$output $gmock_libs"
 echo $output
 
 exit 0
