--- a/tests/lib/gtest-1.8.0/googletest/msvc/gtest_unittest-md.vcproj
+++ b/tests/lib/gtest-1.8.0/googletest/msvc/gtest_unittest-md.vcproj
@@ -116,7 +116,7 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath="..\out\gtest_unittest.cc">
+				RelativePath="..\test\gtest_unittest.cc">
 				<FileConfiguration
 					Name="Debug|Win32">
 					<Tool
