--- a/tests/lab9test/CMakeLists.txt
+++ b/tests/lab9test/CMakeLists.txt
@@ -9,13 +9,12 @@ set(TEST_LAB_NUMBER 9)
 add_gtest_with_memleak(base_serializer libserialization)
 add_gtest_with_memleak(xml_serializer libserialization)
 add_gtest_with_memleak(json_serializer libserialization)
-add_gtest_with_memleak(building_repository libserialization)
 
 
 #######################################################################
 ##  ALL TESTS
 #######################################################################
-add_executable(lab9_all_tests ${SOURCE_FILES})
+add_executable(lab9_all_tests ${SOURCE_FILES} ../../lab9/academiaserializer/Room.cpp ../../lab9/academiaserializer/Room.h ../../lab9/academiaserializer/Building.cpp ../../lab9/academiaserializer/Building.h ../../lab9/academiaserializer/Serializable.cpp ../../lab9/academiaserializer/Serializable.h ../../lab9/academiaserializer/Serialization.h ../../lab9/academiaserializer/main.cpp)
 
 target_link_libraries(lab9_all_tests ${GTEST_LIBS})
 target_link_libraries(lab9_all_tests libserialization)
