--- a/lab10/algotest/CMakeLists.txt
+++ b/lab10/algotest/CMakeLists.txt
@@ -1,13 +1,13 @@
 
 project(algotest)
 
-set(HEDEAR_FILES Algorithms.h)
-set(SOURCE_FILES Algorithms.cpp)
+set(HEDEAR_FILES Algo.h)
+set(SOURCE_FILES Algo.cpp)
 
-add_library(libalgorithms STATIC ${SOURCE_FILES})
+add_library(libalgotest STATIC ${SOURCE_FILES})
 target_include_directories(libalgorithms PUBLIC .)
 
-add_executable(algorithms ${SOURCE_FILES} main.cpp)
+add_executable(algotest ${SOURCE_FILES} main.cpp)
 
-target_link_libraries(algorithms libalgorithms)
+target_link_libraries(algotest libalgotest)
 
