--- a/lab10/algotest/CMakeLists.txt
+++ b/lab10/algotest/CMakeLists.txt
@@ -1,13 +1,13 @@
 
-project(algotest)
+project(algo)
 
 set(HEDEAR_FILES Algo.h)
 set(SOURCE_FILES Algo.cpp)
 
-add_library(libalgotest STATIC ${SOURCE_FILES})
-target_include_directories(libalgorithms PUBLIC .)
+add_library(libalgo STATIC ${SOURCE_FILES})
+target_include_directories(libalgo PUBLIC .)
 
-add_executable(algotest ${SOURCE_FILES} main.cpp)
+add_executable(algo ${SOURCE_FILES} main.cpp)
 
-target_link_libraries(algotest libalgotest)
+target_link_libraries(algo libalgo)
 
