Lab10 scheduler preparation

--- a/lab11/logger/CMakeLists.txt
+++ b/lab11/logger/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES Logger.cpp)
 add_library(liblogger STATIC ${SOURCE_FILES})
 target_include_directories(liblogger PUBLIC .)
 
-add_executable(logger ${SOURCE_FILES} main.cpp)
+add_executable(logger ${SOURCE_FILES} main.cpp Logger.cpp Logger.h)
 
 target_link_libraries(logger liblogger)
 
