--- a/lab13/arabicroman/CMakeLists.txt
+++ b/lab13/arabicroman/CMakeLists.txt
@@ -1,13 +1,13 @@
 
 project(arabicroman)
 
-set(HEDEAR_FILES ArabicRoman.h ArabicRomanTest.h)
-set(SOURCE_FILES ArabicRoman.cpp ArabicRomanTest.cpp)
+set(HEDEAR_FILES ArabicRoman.h)
+set(SOURCE_FILES ArabicRoman.cpp)
 
 add_library(libarabicroman STATIC ${SOURCE_FILES})
 target_include_directories(libarabicroman PUBLIC .)
 
-add_executable(arabicroman ${SOURCE_FILES} main.cpp)
+add_executable(arabicroman ${SOURCE_FILES} main.cpp ArabicRoman.cpp ArabicRoman.h)
 
 target_link_libraries(arabicroman libarabicroman)
 
