added value size and adding depth function

--- a/lab12/tree/CMakeLists.txt
+++ b/lab12/tree/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 project(tree)
 
-set(HEDEAR_FILES tree.h)
-set(SOURCE_FILES tree.cpp)
+set(HEDEAR_FILES Tree.h)
+set(SOURCE_FILES Tree.cpp)
 
 add_library(libtree STATIC ${SOURCE_FILES})
 target_include_directories(libtree PUBLIC .)
@@ -10,3 +10,4 @@ target_include_directories(libtree PUBLIC .)
 add_executable(tree ${SOURCE_FILES} main.cpp)
 
 target_link_libraries(tree libtree)
+
