--- a/lab12/tree/CMakeLists.txt
+++ b/lab12/tree/CMakeLists.txt
@@ -4,7 +4,7 @@ project(tree)
 set(HEDEAR_FILES tree.h)
 set(SOURCE_FILES tree.cpp)
 
-add_library(libtree STATIC ${SOURCE_FILES})
+add_library(libtree STATIC ${SOURCE_FILES} ../academiasequentialgenerator/main.cpp ../academiateacherhash/main.cpp ../timerecorder/main.cpp)
 target_include_directories(libtree PUBLIC .)
 
 add_executable(tree ${SOURCE_FILES} main.cpp)
