--- a/lab12/CMakeLists.txt
+++ b/lab12/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory_if_exists(tree)
 add_subdirectory_if_exists(timerecorder)
 add_subdirectory_if_exists(teacherhash)
 add_subdirectory_if_exists(sequentialgenerator)
+add_subdirectory_if_exists(treeiterators)
